--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
