--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.4",
     "@types/sequelize": "^4.28.14",
+    "@types/uuid": "^8.3.4",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -27,6 +29,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
+    "uuid": "^8.3.2",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
