--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/animejs": "^3.1.5",
     "@types/antd": "^1.0.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
@@ -22,6 +23,7 @@
     "add": "^2.0.6",
     "animejs": "^3.2.1",
     "antd": "^4.21.6",
+    "axios": "^0.27.2",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
     "node-sass": "^7.0.1",
