--- a/server/env/.env
+++ b/server/env/.env
@@ -6,3 +6,6 @@ DB_HOST=localhost
 DB_PASSWORD=root
 DB_USERNAME=postgres
 NODE_ENV=development
+ACCESS_WORD=Rifle
+REFRESH_WORD=Spider
+RTC_PORT=5427
