--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,14 @@
     "production": "ts-node index.ts",
     "dev": "ts-node index.ts",
     "demon": "nodemon index.ts",
-    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register ./index.ts\""
+    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register ./index.ts\"",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
@@ -20,12 +22,14 @@
     "@types/node": "^18.0.4",
     "@types/sequelize": "^4.28.14",
     "@types/uuid": "^8.3.4",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "peer": "^0.6.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
