--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,13 @@
     "target": "es5",
     "sourceMap": true,
       "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "lib": [
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015.promise"
+    ]
   },
     "exclude": [
     "node_modules"
