--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "animejs": "^3.2.1",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
+    "conf": "^10.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
     "node-sass": "^7.0.1",
