--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Morgana",
   "version": "1.0.0",
   "scripts": {
-    "dev": "ts-node ./server/index.ts",
+    "dev": "ts-node ../PettersonTestAPI/index.ts",
     "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register src/server.ts\""
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.4",
     "dotenv": "^16.0.1",
+    "electron-store": "^8.1.0",
     "express": "^4.18.1"
   }
 }
