--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^18.0.4",
     "@types/sequelize": "^4.28.14",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -29,12 +30,14 @@
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "peer": "^0.6.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
